# fin-data-manager

./: README.md  package-lock.json  pyproject.toml
php/: db.php
reactapp/: package-lock.json
reactapp/public/: manifest.json
reactapp/src/: App.js  index.css
reports/: README.md  deliver-08.qmd  deliver-12.qmd  my-ddl.sql
src/: README.md
