[tool.poetry]
name = "cmsc408-fa2024-proj-team-business"
version = "0.1.0"
description = ""
authors = ["Carissa Trieu <trieuc3@vcu.edu>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
matplotlib = "^3.8.0"
plotly = "^5.18.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
markdown = "^3.5"
pandas = "^2.1.1"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
mysql-connector-python = "^8.2.0"
python-dotenv = "^1.0.0"
alpha-vantage = "^3.0.0"
requests = "^2.32.3"
notebook = "^7.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
